fixed: keyvalue removing type